--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-   "build": "nest build",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate:deploy": "prisma migrate deploy",
-    "prisma:db:push": "prisma db push",
-    "prisma:studio": "prisma studio",
+    "build": "nest build",
+    "start": "nest start",
     "start:prod": "node dist/main",
-    "render-build": "pnpm install && pnpm prisma:generate && pnpm build && pnpm prisma:migrate:deploy",
+    "prisma:generate": "prisma generate",
+    "prisma:db:push": "prisma db push --accept-data-loss",
+    "prisma:migrate:deploy": "prisma migrate deploy",
+    "render-build": "pnpm install && pnpm prisma:generate && pnpm build && pnpm prisma:db:push",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
