--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "webpack --config webpack.config.js",
     "start": "nest start",
     "start:prod": "node dist/main",
     "prisma:generate": "prisma generate",
@@ -24,7 +24,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "postinstall": "prisma generate",
     "vercel-build": "prisma generate && npm run build",
-    "netlify-build":"pnpm install && pnpm prisma:generate && pnpm build && pnpm prisma:db:push"
+    "netlify-build": "npm run prisma:generate && npm run build",
+    "build:nest": "nest build"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -37,6 +38,7 @@
     "@prisma/client": "6.19.0",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.4",
+    "@vendia/serverless-express": "^4.12.6",
     "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
@@ -78,7 +80,10 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "typescript-eslint": "^8.20.0",
+    "webpack": "^5.103.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-node-externals": "^3.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
