--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build && npm run netlify-build"
+  command = "pnpm run build && pnpm run netlify-build"
   functions = "netlify/functions"
   publish = "dist"
 
@@ -13,16 +13,9 @@
   to = "/.netlify/functions/main"
   status = 200
 
-[functions]
-  node_bundler = "esbuild"
-  
 [build.environment]
   NODE_VERSION = "20"
   PRISMA_CLI_BINARY_TARGETS = "rhel-openssl-3.0.x"
 
 [functions."main"]
-  node_bundler = "esbuild"
-  included_files = ["main.js"]
-
-[functions."main"]
-  external_node_modules = ["*"]
+  node_bundler = "none"
