--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "webpack --config webpack.config.js",
+    "postbuild": "cp -r node_modules netlify/functions/main/ || xcopy /E /I /Y node_modules netlify\\functions\\main\\node_modules",
     "start": "nest start",
     "start:prod": "node dist/main",
     "prisma:generate": "prisma generate",
@@ -23,8 +24,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "postinstall": "prisma generate",
-    "vercel-build": "prisma generate && npm run build",
-    "netlify-build": "npm run prisma:generate && npm run build",
+    "vercel-build": "prisma generate && pnpm run build",
+    "netlify-build": "pnpm run prisma:generate && pnpm run build",
     "build:nest": "nest build"
   },
   "dependencies": {
