--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "postbuild": "cp -r node_modules netlify/functions/main/ || xcopy /E /I /Y node_modules netlify\\functions\\main\\node_modules",
+    "build": "nest build && webpack --config webpack.config.js",
+    "postbuild": "cp package.json netlify/functions/main/ && cp -r node_modules netlify/functions/main/ 2>/dev/null || true",
+    "netlify-build": "pnpm run prisma:generate && pnpm run build",
+    "build:nest": "nest build",
     "start": "nest start",
     "start:prod": "node dist/main",
     "prisma:generate": "prisma generate",
@@ -25,8 +27,6 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "postinstall": "prisma generate",
     "vercel-build": "prisma generate && pnpm run build",
-    "netlify-build": "pnpm run prisma:generate && pnpm run build",
-    "build:nest": "nest build"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
