--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "postinstall": "prisma generate",
-    "vercel-build": "prisma generate && pnpm run build",
+    "vercel-build": "prisma generate && pnpm run build"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
