--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "pnpm run build && pnpm run netlify-build"
+  command = "pnpm run netlify-build"
   functions = "netlify/functions"
   publish = "dist"
 
@@ -17,5 +17,4 @@
   NODE_VERSION = "20"
   PRISMA_CLI_BINARY_TARGETS = "rhel-openssl-3.0.x"
 
-[functions."main"]
-  node_bundler = "none"
+[functions]
