--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build && webpack --config webpack.config.js",
-    "postbuild": "cp package.json netlify/functions/main/ && cp -r node_modules netlify/functions/main/ 2>/dev/null || true",
+    "build": "nest build",
+    "postbuild": "mkdir -p netlify/functions/main && cp -r dist netlify/functions/main/dist && cp package.json netlify/functions/main/ && cd netlify/functions/main && npm install --production",
     "netlify-build": "pnpm run prisma:generate && pnpm run build",
     "build:nest": "nest build",
     "start": "nest start",
