--- a/netlify/functions/main/package.json
+++ b/netlify/functions/main/package.json
@@ -1,9 +1,7 @@
 {
   "name": "main-function",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
+  "main": "lambda.js",
+  "scripts": {},
   "dependencies": {}
 }
