--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "noFallthroughCasesInSwitch": false
   },
   "include": [
-    "src/**/*",
-    "src/lambda.ts"
-  ]
+    "src/**/*.ts"
+  ],
+  "exclude": ["node_modules", "dist"]
 }
