--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   command = "pnpm run netlify-build"
   functions = "netlify/functions"
-  publish = "dist"
+  publish = "."
 
 [[redirects]]
   from = "/api/*"
@@ -16,3 +16,4 @@
 [build.environment]
   NODE_VERSION = "20"
   PRISMA_CLI_BINARY_TARGETS = "rhel-openssl-3.0.x"
+  PNPM_VERSION = "9.15.1"
