--- a/netlify.toml
+++ b/netlify.toml
@@ -1,19 +1,17 @@
 [build]
   command = "pnpm run netlify-build"
   functions = "netlify/functions"
-  publish = "."
+  publish = "dist"
 
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/main/:splat"
-  status = 200
+[build.environment]
+  NODE_VERSION = "18"
 
 [[redirects]]
   from = "/*"
-  to = "/.netlify/functions/main"
+  to = "/.netlify/functions/api/:splat"
   status = 200
+  force = true
 
-[build.environment]
-  NODE_VERSION = "20"
-  PRISMA_CLI_BINARY_TARGETS = "rhel-openssl-3.0.x"
-  PNPM_VERSION = "9.15.1"
+[functions]
+  node_bundler = "esbuild"
+  external_node_modules = ["@prisma/client", ".prisma/client"]
