--- a/package.json
+++ b/package.json
@@ -5,27 +5,25 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
-    "scripts": {
+  "scripts": {
     "build": "nest build",
-    "netlify-build": "pnpm run prisma:generate && pnpm run build && pnpm run copy-deps",
-    "build:nest": "nest build",
     "start": "nest start",
     "start:prod": "node dist/main",
-    "prisma:generate": "prisma generate",
-    "prisma:db:push": "prisma db push --accept-data-loss",
-    "prisma:migrate:deploy": "prisma migrate deploy",
-    "render-build": "pnpm install && pnpm prisma:generate && pnpm build && pnpm prisma:db:push",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prisma:generate": "prisma generate",
+    "prisma:db:push": "prisma db push --accept-data-loss",
+    "prisma:migrate:deploy": "prisma migrate deploy",
     "postinstall": "prisma generate",
-    "vercel-build": "prisma generate && pnpm run build"
+    "vercel-build": "prisma generate && nest build",
+    "netlify-build": "prisma generate && nest build"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -38,7 +36,6 @@
     "@prisma/client": "6.19.0",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.4",
-    "@vendia/serverless-express": "^4.12.6",
     "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
@@ -51,6 +48,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "serverless-http": "^3.2.0",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
@@ -65,6 +63,7 @@
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/serverless-http": "^1.7.0",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
