--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,13 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "netlify/functions/**/*.ts"
   ],
   "exclude": ["node_modules", "dist"]
 }
