fixed 404 return for vercel

--- a/netlify.toml
+++ b/netlify.toml
@@ -15,3 +15,14 @@
 [functions]
   node_bundler = "esbuild"
   external_node_modules = ["@prisma/client", ".prisma/client"]
+  
+  # Add this section to mark optional dependencies as external
+  [functions."*"]
+    external_node_modules = [
+      "@prisma/client",
+      ".prisma/client",
+      "@nestjs/microservices",
+      "@nestjs/websockets",
+      "@nestjs/platform-socket.io",
+      "class-transformer/storage"
+    ]
