--- a/netlify.toml
+++ b/netlify.toml
@@ -14,5 +14,4 @@
 
 [functions]
   node_bundler = "esbuild"
-  # Don't externalize Prisma - let it be bundled
-  included_files = ["node_modules/.prisma/**", "node_modules/@prisma/client/**", "prisma/**"]
+  included_files = ["prisma/schema.prisma"]
