--- a/package.json
+++ b/package.json
@@ -30,14 +30,16 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.1",
+    "@nestjs/microservices": "11.1.9",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.3",
+    "@nestjs/websockets": "11.1.9",
     "@prisma/client": "6.19.0",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.4",
     "bcryptjs": "^3.0.3",
-    "class-transformer": "^0.5.1",
+    "class-transformer": "0.5.1",
     "class-validator": "^0.14.3",
     "cloudinary": "^2.8.0",
     "express": "^4.22.1",
