--- a/netlify.toml
+++ b/netlify.toml
@@ -14,3 +14,7 @@
 
 [functions]
   node_bundler = "esbuild"
+  included_files = [
+    "node_modules/.prisma/**",
+    "node_modules/@prisma/client/**"
+  ]
