--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "prisma:migrate:deploy": "prisma migrate deploy",
     "postinstall": "prisma generate",
     "vercel-build": "prisma generate && nest build",
-    "netlify-build": "prisma generate && pnpm prisma:copy && nest build",
+    "netlify-build": "prisma generate && nest build",
     "prisma:copy": "cp -R node_modules/.prisma netlify/functions/ && cp -R node_modules/@prisma netlify/functions/node_modules/"
   },
   "dependencies": {
@@ -31,11 +31,9 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.1",
-    "@nestjs/microservices": "11.1.9",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.3",
-    "@nestjs/websockets": "11.1.9",
     "@prisma/client": "6.19.0",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.4",
@@ -58,8 +56,11 @@
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
+    "@nestjs/microservices": "11.1.9",
+    "@nestjs/platform-socket.io": "^11.1.9",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@nestjs/websockets": "11.1.9",
     "@types/bcryptjs": "^3.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
