--- a/netlify.toml
+++ b/netlify.toml
@@ -14,8 +14,5 @@
 
 [functions]
   node_bundler = "esbuild"
-  # Include Prisma generated files
-  included_files = [
-    "node_modules/.pnpm/@prisma+client*/node_modules/.prisma/**",
-    "node_modules/.pnpm/@prisma+client*/node_modules/@prisma/client/**"
-  ]
+  external_node_modules = ["@prisma/client"]
+  included_files = ["node_modules/.pnpm/@prisma+client*/node_modules/**"]
