--- a/netlify.toml
+++ b/netlify.toml
@@ -14,5 +14,22 @@
 
 [functions]
   node_bundler = "esbuild"
-  external_node_modules = ["@prisma/client"]
-  included_files = ["node_modules/.pnpm/@prisma+client*/node_modules/**"]
+  external_node_modules = [
+    "@prisma/client",
+    "@nestjs/microservices",
+    "@nestjs/websockets",
+    "@nestjs/platform-socket.io",
+    "class-transformer/storage",
+    "amqplib",
+    "amqp-connection-manager",
+    "ioredis",
+    "kafkajs",
+    "mqtt",
+    "nats",
+    "@grpc/grpc-js",
+    "@grpc/proto-loader"
+  ]
+  included_files = [
+    "node_modules/.pnpm/@prisma+client*/node_modules/.prisma/**",
+    "node_modules/.pnpm/@prisma+client*/node_modules/@prisma/client/**"
+  ]
