--- a/netlify.toml
+++ b/netlify.toml
@@ -1,35 +1,42 @@
 [build]
-  command = "pnpm run netlify-build"
+  command = "npm run build:netlify && npm run prisma:copy-netlify"
   functions = "netlify/functions"
   publish = "dist"
 
 [build.environment]
   NODE_VERSION = "18"
+  NODE_ENV = "production"
 
+# For local development
+[dev]
+  command = "npm run start:dev"
+  port = 3005
+  publish = "dist"
+
+# Redirect all traffic to function
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/api/:splat"
+  status = 200
+
+# For SPA routing - optional
 [[redirects]]
   from = "/*"
   to = "/.netlify/functions/api/:splat"
   status = 200
-  force = true
 
 [functions]
   node_bundler = "esbuild"
+  
+  # Prisma needs these
   external_node_modules = [
     "@prisma/client",
-    "@nestjs/microservices",
-    "@nestjs/websockets",
-    "@nestjs/platform-socket.io",
-    "class-transformer/storage",
-    "amqplib",
-    "amqp-connection-manager",
-    "ioredis",
-    "kafkajs",
-    "mqtt",
-    "nats",
-    "@grpc/grpc-js",
-    "@grpc/proto-loader"
+    "@prisma/engines",
+    "prisma"
   ]
+  
   included_files = [
-    "node_modules/.pnpm/@prisma+client*/node_modules/.prisma/**",
-    "node_modules/.pnpm/@prisma+client*/node_modules/@prisma/client/**"
+    "node_modules/.prisma/**/*",
+    "node_modules/@prisma/client/**/*",
+    "node_modules/@prisma/engines/**/*"
   ]
