--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-   "build": "nest build",
+    "build": "nest build",
+    "build:netlify": "prisma generate && NODE_ENV=production nest build --webpack --webpackPath webpack.netlify.config.js",
     "vercel-build": "prisma generate && nest build --webpack --webpackPath webpack.config.js",
-    "netlify-build": "prisma generate && nest build",
-    "build:vercel": "prisma generate && NODE_ENV=production nest build --path src/serverless.ts",
-    "build:netlify": "prisma generate && NODE_ENV=production nest build",
-    "prisma:copy-netlify": "node prisma/scripts/netlify-setup.js",
+    "build:vercel": "prisma generate && NODE_ENV=production nest build --webpack --webpackPath webpack.config.js",
     "start": "nest start",
+    "prisma:copy-netlify": "node scripts/setup-prisma.js",
     "start:prod": "node dist/main",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -59,11 +58,8 @@
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
-    "@nestjs/microservices": "11.1.9",
-    "@nestjs/platform-socket.io": "^11.1.9",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
-    "@nestjs/websockets": "11.1.9",
     "@types/bcryptjs": "^3.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
