Update netlify.toml v

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,6 @@
 [build.environment]
   NODE_VERSION = "18"
   NODE_ENV = "production"
-  # Add Node options to handle memory issues
   NODE_OPTIONS = "--max-old-space-size=4096"
 
 # Development server
@@ -30,10 +29,40 @@
 [functions]
   node_bundler = "esbuild"
   
+  # Externalize problematic modules
+  external_node_modules = [
+    "@prisma/client",
+    "@prisma/engines",
+    "prisma",
+    "class-transformer/storage",
+    "@grpc/grpc-js",
+    "@grpc/proto-loader",
+    "kafkajs",
+    "mqtt",
+    "ioredis",
+    "nats",
+    "amqplib",
+    "amqp-connection-manager",
+    "@nestjs/microservices",
+    "@nestjs/websockets",
+    "@nestjs/platform-socket.io"
+  ]
+  
+  included_files = [
+    "node_modules/.prisma/**/*",
+    "node_modules/@prisma/client/**/*",
+    "node_modules/@prisma/engines/**/*",
+    "prisma/schema.prisma"
+  ]
+
+# Function-specific configuration for API function
+[[functions]]
+  path = "netlify/functions/api.ts"
+  node_bundler = "esbuild"
+  
   # Increase timeout for Nest.js cold starts
   timeout = 30
   
-  # Externalize problematic modules
   external_node_modules = [
     "@prisma/client",
     "@prisma/engines",
